Changes for 1.2.7
* Minor Updates to Big World and Great War, updates for bugs in the xml as well as small balancing changes. (veqryn)

* Added Purchases to the Trigger Attachment. (squid daddy)

* Fixed giving technology to be actually random, as previously when the list was smaller than 6, some techs had a higher chance of getting picked than others. (squid daddy)

* Changing LHTR Heavy Bombers with Low Luck to give strength+1 instead of 2*strength for attacks, maxing out at max_dice. (squid daddy)

* Triggered Rule Changes patch added. (squid daddy)

* Lobby Moderator Enhancement patch added. (wisconsin)

* Moore AI fix to Rank Territories, was considering islands as being closer to enemy capitols than other territories with a land route. Also much improved the defense of transports and trasporting locations. (veqryn)

* Moore AI improvement: created a new method so that the AI will attempt to defend the beginning and end of its transport chain. (veqryn)

* Fixed a null pointer errors in Moore AI's rank territories method. (veqryn)

* Combined isTerritoryEnemyAndNotNuetralWater AND isTerritoryEnemyAndNotNeutral INTO isTerritoryEnemyAndNotUnownedWaterOrImpassibleOrRestricted. (veqryn)

* New Territory Attachment, blockadeZone, and Unit Attachment, blockade = value, will allow sea units to blockade territories. (squid daddy)

* national objectives addition of 'uses' and 'atWarPlayers'. Still needs some work on atWar. (squid daddy)

* directOwnershipTerritories National Objective added, ownership by an ally doesn't count. (astabada/franz)

* Enhanced Combat Support attachments. (squid daddy)

* Moore AI purchases tweaking and speeding up. Will no longer consider for purchasing units with zero movement, units with 3 or more attack than defense or defense than attack, 
  and units with zero defense, and sea units with 1 movement, if there are 2 movement sea units available. Also now records when it purchases transports in getDidPurchaseTransports(). (veqryn)
